--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-9.29MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.35MB/s(Youtube:不良林), server: 20.239.176.94, port: 443, type: vmess, uuid: 4adf9138-5aca-4a26-b217-335e72bb680d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.239.176.94}}
-  - {name: 🇷🇺 俄罗斯联邦-940.1KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇨🇳 中国-6.70MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.67MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.33MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.72MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.88MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇭🇰 香港-4.13MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
-  - {name: 🇫🇷 法国-1.43MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-3.03MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-209.3KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.77MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 捷克-3.40MB/s(Youtube:不良林), server: 195.133.53.192, port: 43688, type: vmess, uuid: bd1c8b57-0a9e-4e9f-a261-48e90c871e41, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 捷克-4.76MB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇺🇸 美国-2.81MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-5.48MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.63MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.06MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.69MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-940.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-209.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
+      - 捷克-3.40MB/s(Youtube:不良林)
+      - 捷克-4.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-9.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-940.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-209.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
+      - 捷克-3.40MB/s(Youtube:不良林)
+      - 捷克-4.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-940.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-209.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
+      - 捷克-3.40MB/s(Youtube:不良林)
+      - 捷克-4.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-9.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-940.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-209.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
+      - 捷克-3.40MB/s(Youtube:不良林)
+      - 捷克-4.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-940.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-209.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
+      - 捷克-3.40MB/s(Youtube:不良林)
+      - 捷克-4.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-9.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-940.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-209.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
+      - 捷克-3.40MB/s(Youtube:不良林)
+      - 捷克-4.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-9.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-940.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-209.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
+      - 捷克-3.40MB/s(Youtube:不良林)
+      - 捷克-4.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
