--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-2.06MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.57MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.97MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
   - {name: 🇩🇪 德国-3.00MB/s(Youtube:不良林), server: 80.78.132.177, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-7.39MB/s(Youtube:不良林), server: 103.173.255.228, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.67MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.97MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇳 中国-5.96MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.81MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-5.48MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.63MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.00MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.00MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.00MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.00MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.00MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.00MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.00MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
