--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇩🇪 德国-3.00MB/s(Youtube:不良林), server: 80.78.132.177, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-7.39MB/s(Youtube:不良林), server: 103.173.255.228, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.67MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.97MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇨🇳 中国-5.96MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-209.3KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-417.0KB/s(Youtube:不良林), server: j1.v2.gay, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: j1.v2.gay}}
+  - {name: 🇨🇳 中国-297.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.70MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-420.4KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
   - {name: 🇺🇸 美国-2.81MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-5.48MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.63MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.06MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.69MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.04MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.80MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-751.2KB/s(Youtube:不良林), server: 89.31.126.171, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-3.00MB/s(Youtube:不良林)
-      - 🇻🇳 越南-7.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.96MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-209.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-297.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-420.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-751.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇩🇪 德国-3.00MB/s(Youtube:不良林)
-      - 🇻🇳 越南-7.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.96MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-209.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-297.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-420.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-751.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-3.00MB/s(Youtube:不良林)
-      - 🇻🇳 越南-7.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.96MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-209.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-297.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-420.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-751.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇩🇪 德国-3.00MB/s(Youtube:不良林)
-      - 🇻🇳 越南-7.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.96MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-209.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-297.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-420.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-751.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇩🇪 德国-3.00MB/s(Youtube:不良林)
-      - 🇻🇳 越南-7.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.96MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-209.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-297.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-420.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-751.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-3.00MB/s(Youtube:不良林)
-      - 🇻🇳 越南-7.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.96MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-209.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-297.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-420.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-751.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-3.00MB/s(Youtube:不良林)
-      - 🇻🇳 越南-7.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.96MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-209.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-297.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-420.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-751.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
